SLT_Handler/Include/MMC/MMCWFP39.h

INT API v_move_stop(INT);
INT API set_inposition_level(INT, INT);
INT API fset_inposition_level(INT, INT);
INT API get_inposition_level(INT, pINT);
INT API fget_inposition_level(INT, pINT);
INT API controller_idle(INT);
INT API controller_run(INT);
INT API arm_latch(INT, INT);
INT API latch_status(INT);
INT API get_latched_position(INT, pDOUBLE);
INT API latch(INT);
INT API set_timer(INT, LONG);
INT API get_timer(INT, pLONG);
INT API fget_home_level(INT, pINT);
INT API fget_positive_level(INT, pINT);
INT API fget_negative_level(INT, pINT);
INT API fset_amp_fault_level(INT, INT);
INT API fset_amp_reset_level(INT, INT);
INT API fset_amp_enable_level(INT,INT);
INT API fget_pulse_ratio(INT,pINT);
INT API fset_home_level(INT, INT);
INT API fget_accel_limit(INT, pINT);
INT API fget_vel_limit(INT, pDOUBLE);
INT API fset_vel_limit(INT, double);
INT API fset_positive_level(INT, INT);
INT API fset_negative_level(INT, INT);
INT API set_io_mode(INT, INT);
INT API fset_io_mode(INT, INT);
INT API get_io_mode(INT, pINT);
INT API fget_io_mode(INT, pINT);
INT API get_io_num(INT, pINT);
INT API set_analog_offset(INT, INT);
INT API fset_analog_offset(INT, INT);
INT API get_analog_offset(INT, pINT);
INT API fget_analog_offset(INT, pINT);
INT API set_inposition_required(INT, INT);
INT API fset_inposition_required(INT, INT);
INT API get_inposition_required(INT, pINT);
INT API fget_inposition_required(INT, pINT);
INT API set_coordinate_direction(INT, INT);
INT API fset_coordinate_direction(INT, INT);
INT API get_coordinate_direction(INT, pINT);
INT API fget_coordinate_direction(INT, pINT);
INT API set_encoder_direction(INT, INT);
INT API fset_encoder_direction(INT, INT);
INT API get_encoder_direction(INT, pINT);
INT API fget_encoder_direction(INT, pINT);
INT API set_axis_runstop(INT,INT);
INT API get_axis_runstop(INT,pINT);
INT API set_endless_rotationax(INT, INT, INT);
INT API fset_endless_rotationax(INT, INT, INT);
INT API get_endless_rotationax(INT, pINT);
INT API fget_endless_rotationax(INT, pINT);
INT API set_endless_linearax(INT, INT, INT);
INT API fset_endless_linearax(INT, INT, INT);
INT API get_endless_linearax(INT, pINT);
INT API fget_endless_linearax(INT, pINT);
INT API set_endless_range(INT, double);
INT API fset_endless_range(INT, double);
INT API get_endless_range(INT, pDOUBLE);
INT API fget_endless_range(INT, pDOUBLE);
INT API set_linear_all_stop_flag(INT, INT);
INT API get_linear_all_stop_flag(INT, pINT);
INT API get_command_rpm(INT, pINT);
INT API get_encoder_rpm(INT, pINT);
INT API set_amp_resolution(INT, INT);
INT API fset_amp_resolution(INT, INT);
INT API get_amp_resolution(INT, pINT);
INT API fget_amp_resolution(INT, pINT);
INT API set_collision_prevent_flag(INT, INT);
INT API get_collision_prevent_flag(INT, pINT);
INT API set_collision_prevent(INT, INT, INT, INT, double);
INT API set_abs_encoder_type(INT, INT);
INT API get_abs_encoder_type(INT, pINT);
INT API set_fast_read_encoder(INT, INT);
INT API get_fast_read_encoder(INT, pINT);
INT API set_control_timer(INT, INT);
INT API fset_control_timer(INT , INT);
INT API get_control_timer(INT, pINT);
INT API fget_control_timer(INT , pINT);
INT API spl_move_data(INT, INT, INT, INT, INT, pDOUBLE, pDOUBLE, pDOUBLE, double,INT);
INT API spl_movex(INT, INT, INT, INT);
INT API spl_arc_movenax(INT, pINT, double, double, pDOUBLE, double, INT, INT);
INT API spl_line_movenax(INT, pINT, pDOUBLE, double, INT);
INT API set_mmc_led_num(INT);
INT API get_mmc_led_num(INT, pINT);
INT API get_fast_position(INT, pDOUBLE);
INT API set_encoder_ratioa(INT, INT);
INT API fset_encoder_ratioa(INT, INT);
INT API get_encoder_ratioa(INT, pINT);
INT API fget_encoder_ratioa(INT, pINT);