SLT_Handler/Include/MMC/MMCWFP39.pas


 function v_move_stop     ( ax : Smallint   ): Smallint   ;stdcall;   external    'MMCWFP39.DLL';
 function set_inposition_level    ( ax : Smallint;  n : Smallint)   : Smallint    ;stdcall;   external    'MMCWFP39.DLL';
 function fset_inposition_level       ( ax : Smallint;  n : Smallint)   : Smallint    ;stdcall;   external    'MMCWFP39.DLL';
 function get_inposition_level    ( ax : Smallint; piSt : pointer)   : Smallint  ;stdcall;   external    'MMCWFP39.DLL';
 function fget_inposition_level       ( ax : Smallint; piSt : pointer)   : Smallint  ;stdcall;   external    'MMCWFP39.DLL';

 function controller_idle     ( ax : Smallint)   : Smallint   ;stdcall;   external    'MMCWFP39.DLL';
 function controller_run      ( ax : Smallint)   : Smallint   ;stdcall;   external    'MMCWFP39.DLL';

 function arm_latch       ( bdnum : Smallint;  state : Smallint)   : Smallint     ;stdcall;   external    'MMCWFP39.DLL';
 function latch_status    ( bdnum : Smallint)   : Smallint    ;stdcall;   external    'MMCWFP39.DLL';
 function get_latched_position    ( ax : Smallint; pdPos : pointer)   : Smallint     ;stdcall;   external    'MMCWFP39.DLL';
 function latch       ( bdnum : Smallint)   : Smallint    ;stdcall;   external    'MMCWFP39.DLL';

 function set_timer (bdnum : Smallint; t : Longint)   : Smallint     ;stdcall;   external    'MMCWFP39.DLL';
 function get_timer (bdnum : Smallint; pt : pointer)    : Smallint     ;stdcall;   external    'MMCWFP39.DLL';

 function fget_home_level     ( ax : Smallint; piSt : pointer)   : Smallint  ;stdcall;   external    'MMCWFP39.DLL';
 function fget_positive_level     ( ax : Smallint; piSt : pointer)   : Smallint  ;stdcall;   external    'MMCWFP39.DLL';
 function fget_negative_level     ( ax : Smallint; piSt : pointer)   : Smallint  ;stdcall;   external    'MMCWFP39.DLL';

 function fset_amp_fault_level    ( ax : Smallint;  n : Smallint)   : Smallint    ;stdcall;   external    'MMCWFP39.DLL';
 function fset_amp_reset_level    ( ax : Smallint;  n : Smallint)   : Smallint    ;stdcall;   external    'MMCWFP39.DLL';
 function fset_amp_enable_level       ( ax : Smallint;  n : Smallint)   : Smallint    ;stdcall;   external    'MMCWFP39.DLL';
 function fget_pulse_ratio    ( ax : Smallint; piRatio : pointer)   : Smallint  ;stdcall;   external    'MMCWFP39.DLL';
 function fset_home_level     ( ax : Smallint;  n : Smallint)   : Smallint    ;stdcall;   external    'MMCWFP39.DLL';
 function fget_accel_limit    ( ax : Smallint; piSt : pointer)   : Smallint  ;stdcall;   external    'MMCWFP39.DLL';
 function fget_vel_limit      ( ax : Smallint; pdVel : pointer)   : Smallint   ;stdcall;   external    'MMCWFP39.DLL';
 function fset_vel_limit      ( ax : Smallint;  f : Double)   : Smallint     ;stdcall;   external    'MMCWFP39.DLL';
 function fset_positive_level     ( ax : Smallint;  n : Smallint)   : Smallint    ;stdcall;   external    'MMCWFP39.DLL';
 function fset_negative_level     ( ax : Smallint;  n : Smallint)   : Smallint    ;stdcall;   external    'MMCWFP39.DLL';

 function set_io_mode     ( nBdNum : Smallint;  IoMode : Smallint)   : Smallint   ;stdcall;   external    'MMCWFP39.DLL';
 function fset_io_mode    ( nBdNum : Smallint;  IoMode : Smallint)   : Smallint   ;stdcall;   external    'MMCWFP39.DLL';
 function get_io_mode     ( nBdNum : Smallint; piIoMode : pointer)   : Smallint     ;stdcall;   external    'MMCWFP39.DLL';
 function fget_io_mode    ( nBdNum : Smallint; piIoMode : pointer)   : Smallint     ;stdcall;   external    'MMCWFP39.DLL';
 function get_io_num      ( nax : Smallint; pival : pointer)   : Smallint  ;stdcall;   external    'MMCWFP39.DLL';

 function set_analog_offset       ( naxis : Smallint;  nvoltage : Smallint)   : Smallint  ;stdcall;   external    'MMCWFP39.DLL';
 function fset_analog_offset      ( naxis : Smallint;  nvoltage : Smallint)   : Smallint  ;stdcall;   external    'MMCWFP39.DLL';
 function get_analog_offset       ( naxis : Smallint; pivoltage : pointer)   : Smallint    ;stdcall;   external    'MMCWFP39.DLL';
 function fget_analog_offset      ( naxis : Smallint; pivoltage : pointer)   : Smallint    ;stdcall;   external    'MMCWFP39.DLL';

 function fget_inposition_required    ( ax : Smallint; piVal : pointer)   : Smallint  ;stdcall;   external    'MMCWFP39.DLL';
 function get_inposition_required     ( ax : Smallint; piVal : pointer)   : Smallint  ;stdcall;   external    'MMCWFP39.DLL';
 function fset_inposition_required    ( ax : Smallint;  n : Smallint)   : Smallint    ;stdcall;   external    'MMCWFP39.DLL';
 function set_inposition_required     ( ax : Smallint;  n : Smallint)   : Smallint    ;stdcall;   external    'MMCWFP39.DLL';

 function fget_coordinate_direction       ( ax : Smallint; piVal : pointer)   : Smallint  ;stdcall;   external    'MMCWFP39.DLL';
 function get_coordinate_direction    ( ax : Smallint; piVal : pointer)   : Smallint  ;stdcall;   external    'MMCWFP39.DLL';
 function fset_coordinate_direction       ( ax : Smallint;  n : Smallint)   : Smallint    ;stdcall;   external    'MMCWFP39.DLL';
 function set_coordinate_direction    ( ax : Smallint;  n : Smallint)   : Smallint    ;stdcall;   external    'MMCWFP39.DLL';

 function fget_encoder_direction      ( ax : Smallint; piVal : pointer)   : Smallint  ;stdcall;   external    'MMCWFP39.DLL';
 function get_encoder_direction       ( ax : Smallint; piVal : pointer)   : Smallint  ;stdcall;   external    'MMCWFP39.DLL';
 function fset_encoder_direction      ( ax : Smallint;  n : Smallint)   : Smallint    ;stdcall;   external    'MMCWFP39.DLL';
 function set_encoder_direction       ( ax : Smallint;  n : Smallint)   : Smallint    ;stdcall;   external    'MMCWFP39.DLL';

 function get_axis_runstop    ( bdnum : Smallint; piVal : pointer)   : Smallint   ;stdcall;   external    'MMCWFP39.DLL';
 function set_axis_runstop    ( bdnum : Smallint;  n : Smallint)   : Smallint     ;stdcall;   external    'MMCWFP39.DLL';

 function set_endless_rotationax      ( ax : Smallint;  mode : Smallint;  resolution : Smallint)   : Smallint     ;stdcall;   external    'MMCWFP39.DLL';
 function fset_endless_rotationax     ( ax : Smallint;  mode : Smallint;  resolution : Smallint)   : Smallint     ;stdcall;   external    'MMCWFP39.DLL';
 function get_endless_rotationax      ( ax : Smallint;  pimode : pointer)   : Smallint   ;stdcall;   external    'MMCWFP39.DLL';
 function fget_endless_rotationax     ( ax : Smallint;  pimode : pointer)   : Smallint   ;stdcall;   external    'MMCWFP39.DLL';

 function set_endless_linearax    ( ax : Smallint;  mode : Smallint;  resolution : Smallint)   : Smallint     ;stdcall;   external    'MMCWFP39.DLL';
 function fset_endless_linearax       ( ax : Smallint;  mode : Smallint;  resolution : Smallint)   : Smallint     ;stdcall;   external    'MMCWFP39.DLL';
 function get_endless_linearax    ( ax : Smallint;   pimode : pointer)   : Smallint   ;stdcall;   external    'MMCWFP39.DLL';
 function fget_endless_linearax       ( ax : Smallint;   pimode : pointer)   : Smallint   ;stdcall;   external    'MMCWFP39.DLL';
 function set_endless_range       ( ax : Smallint;  range : Double)   : Smallint     ;stdcall;   external    'MMCWFP39.DLL';
 function fset_endless_range      ( ax : Smallint;  range : Double)   : Smallint     ;stdcall;   external    'MMCWFP39.DLL';
 function get_endless_range       ( ax : Smallint; pdrange : pointer)   : Smallint   ;stdcall;   external    'MMCWFP39.DLL';
 function fget_endless_range      ( ax : Smallint; pdrange : pointer)   : Smallint   ;stdcall;   external    'MMCWFP39.DLL';

 function set_linear_all_stop_flag    ( ax : Smallint;  flag : Smallint)   : Smallint     ;stdcall;   external    'MMCWFP39.DLL';
 function get_linear_all_stop_flag    ( ax : Smallint; piflag : pointer)   : Smallint   ;stdcall;   external    'MMCWFP39.DLL';

 Function get_command_rpm  ( ax : Smallint; irpm : pointer) : Smallint       ;stdcall;   external    'MMCWFP39.DLL';
 Function get_encoder_rpm ( ax : Smallint; irpm : pointer) : Smallint          ;stdcall;   external    'MMCWFP39.DLL';

 Function set_amp_resolution   ( ax : Smallint;  res : Smallint) : Smallint      ;stdcall;   external    'MMCWFP39.DLL';
 Function fset_amp_resolution  ( ax : Smallint;  res : Smallint) : Smallint       ;stdcall;   external    'MMCWFP39.DLL';
 Function get_amp_resolution  ( ax : Smallint; ires : pointer) : Smallint           ;stdcall;   external    'MMCWFP39.DLL';
 Function fget_amp_resolution  ( ax : Smallint; ires : pointer) : Smallint            ;stdcall;   external    'MMCWFP39.DLL';

 Function set_collision_prevent_flag ( bd_num : Smallint;  mode : Smallint) : Smallint        ;stdcall;   external    'MMCWFP39.DLL';
 Function get_collision_prevent_flag  ( bd_num : Smallint; imode : pointer) : Smallint               ;stdcall;   external    'MMCWFP39.DLL';
 Function set_collision_prevent  ( max : Smallint;  sax : Smallint;  add_sub : Smallint;  non_equal : Smallint;  c_pos : Double) : Smallint       ;stdcall;   external    'MMCWFP39.DLL';

 Function set_abs_encoder_type  ( ax : Smallint;  itype : Smallint) : Smallint      ;stdcall;   external    'MMCWFP39.DLL';
 Function get_abs_encoder_type  ( ax : Smallint; itype : pointer) : Smallint             ;stdcall;   external    'MMCWFP39.DLL';

 Function set_fast_read_encoder ( ax : Smallint;  status:Smallint):Smallint       ;stdcall;   external    'MMCWFP39.DLL';
 Function get_fast_read_encoder  ( ax : Smallint; istatus : pointer) : Smallint           ;stdcall;   external    'MMCWFP39.DLL';

 Function set_control_timer  ( bn : Smallint;  itime : Smallint) : Smallint           ;stdcall;   external    'MMCWFP39.DLL';
 Function fset_control_timer ( bn : Smallint;  itime : Smallint) : Smallint          ;stdcall;   external    'MMCWFP39.DLL';
 Function get_control_timer  ( bn : Smallint; itime : pointer) : Smallint                 ;stdcall;   external    'MMCWFP39.DLL';
 Function fget_control_timer  ( bn : Smallint; itime : pointer) : Smallint                ;stdcall;   external    'MMCWFP39.DLL';
 Function spl_move_data  ( spl_num : Smallint;  nlen : Smallint;  ax1 : Smallint;  ax2 : Smallint;  ax3 : Smallint; dpnt1 : pointer; dpnt2 : pointer; dpnt3 : pointer;  vel : Double;  acc : Smallint) : Smallint      ;stdcall;   external    'MMCWFP39.DLL';
 Function spl_movex  ( spl_num : Smallint;  ax1 : Smallint;  ax2 : Smallint;  ax3 : Smallint) : Smallint           ;stdcall;   external    'MMCWFP39.DLL';
 Function spl_arc_movenax  ( nlen : Smallint; arriax : pointer;  x_center : Double;  y_center : Double; dpnt : pointer;  vel : Double;  acc : Smallint;  cdir : Smallint) : Smallint      ;stdcall;   external    'MMCWFP39.DLL';
 Function spl_line_movenax ( nlen : Smallint; arriax : pointer; dpnt : pointer;  vel : Double;  acc : Smallint) : Smallint        ;stdcall;   external    'MMCWFP39.DLL';

 Function set_mmc_led_num ( bn : Smallint) : Smallint            ;stdcall;   external    'MMCWFP39.DLL';
 Function get_mmc_led_num ( bn : Smallint; iled_num : pointer) : Smallint      ;stdcall;   external    'MMCWFP39.DLL';
 Function get_fast_position  ( ax : Smallint; dpos : pointer) : Smallint         ;stdcall;   external    'MMCWFP39.DLL';

 Function set_encoder_ratioa  ( ax : Smallint;  ratioa : Smallint) : Smallint             ;stdcall;   external    'MMCWFP39.DLL';
 Function fset_encoder_ratioa  ( ax : Smallint;  ratioa : Smallint) : Smallint              ;stdcall;   external    'MMCWFP39.DLL';
 Function get_encoder_ratioa  ( ax : Smallint; iratioa : pointer) : Smallint                   ;stdcall;   external    'MMCWFP39.DLL';
 Function fget_encoder_ratioa  ( ax : Smallint; iratioa : pointer) : Smallint                   ;stdcall;   external    'MMCWFP39.DLL';
